Introduced Abstract Classes to differentiate different Murli Types.
Added varios paths to app.config file and fetching them in code wherever required.

--Shreehari

--- a/App.config
+++ b/App.config
@@ -1,6 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
+
+  <connectionStrings>
+
+    <!--<add name="MurliSearchDBConString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB; AttachDbFilename= C:\Users\Shreehari\source\repos\2022\MurliSearch\Database\MurliSearchDb.mdf; Integrated Security = True;"/>-->
+
+    <add name="MurlisPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Murlis"/>
+    
+    <add name="IndexPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Indexes"/>
+    
+    <!--<add name="IndexPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Indexes"/>-->
+
+    <add name="ImagesPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Resources\Images"/>
+
+    <add name="IconsPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Resources\Images\Icons"/>
+
+
+    <!--<add name="LogFilePath" connectionString="C:\Users\Shreehari\source\repos\2022\MurliSearch\Log Files"/>-->
+
+    <!--<add name="JsonFilesPath" connectionString="C:\Users\Shreehari\source\repos\2022\MurliSearch\Others"/>-->
+
+  </connectionStrings>
+  
+  
 </configuration>
