Introduced AvyaktMurliSearchEngine Inherited class.
Adding SelfControls & MaterialSkin.dlls

Adding PDFViewer Control & FrmDocViewer to Show PDF Docs.

FrmHome:
Introduced mainFormInstance parmeter to Interact with MainForm.

Now showing Results in an new Control Named: Result Card instead of RichTextBox.

Adding few Icons.

-Shreehari.

--- a/App.config
+++ b/App.config
@@ -1,20 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 
   <connectionStrings>
 
     <!--<add name="MurliSearchDBConString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB; AttachDbFilename= C:\Users\Shreehari\source\repos\2022\MurliSearch\Database\MurliSearchDb.mdf; Integrated Security = True;"/>-->
 
-    <add name="MurlisPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Murlis"/>
+    <add name="MurlisPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Murlis" />
+    <add name="HindiAVMurlisPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Murlis\Hindi Murlis\Avyakt Murlis" />
+    <add name="HindiAVMurlisPDFPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Murlis\Hindi Murlis\Avyakt Murlis\PDF Murlis" />
     
-    <add name="IndexPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Indexes"/>
+    <add name="IndexPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Indexes" />
     
-    <add name="ImagesPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Resources\Images"/>
+    <add name="ImagesPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Resources\Images" />
 
-    <add name="IconsPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Resources\Images\Icons"/>
+    <add name="IconsPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Resources\Images\Icons" />
 
     <!--<add name="LogFilePath" connectionString="C:\Users\Shreehari\source\repos\2022\MurliSearch\Log Files"/>-->
 
@@ -23,4 +25,26 @@
   </connectionStrings>
   
   
+  <runtime>
+  
+  
+          <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+  
+  
+                  <dependentAssembly>
+  
+  
+                          <assemblyIdentity name="Syncfusion.Compression.Base" publicKeyToken="3d67ed1f87d44c89" culture="neutral" />
+  
+  
+                          <bindingRedirect oldVersion="0.0.0.0-26.2462.14.0" newVersion="26.2462.14.0" />
+  
+  
+                  </dependentAssembly>
+  
+  
+          </assemblyBinding>
+  
+  
+  </runtime>
 </configuration>
