--- a/packages.config
+++ b/packages.config
@@ -9,9 +9,22 @@
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.1.2" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.Web.WebView2" version="1.0.2739.15" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net472" />
   <package id="Prism.Core" version="7.2.0.1422" targetFramework="net472" />
+  <package id="Syncfusion.Compression.Base" version="26.2.14" targetFramework="net48" />
+  <package id="Syncfusion.Grid.Base" version="26.2.14" targetFramework="net48" />
+  <package id="Syncfusion.Grid.Windows" version="26.2.14" targetFramework="net48" />
+  <package id="Syncfusion.Licensing" version="26.2.14" targetFramework="net48" />
+  <package id="Syncfusion.Pdf.WinForms" version="26.2.14" targetFramework="net48" />
+  <package id="Syncfusion.PdfToImageConverter.WinForms" version="26.2.14" targetFramework="net48" />
+  <package id="Syncfusion.PdfViewer.Windows" version="26.2.14" targetFramework="net48" />
+  <package id="Syncfusion.Shared.Base" version="26.2.14" targetFramework="net48" />
+  <package id="Syncfusion.Shared.Windows" version="26.2.14" targetFramework="net48" />
+  <package id="Syncfusion.SpellChecker.Base" version="26.2.14" targetFramework="net48" />
+  <package id="Syncfusion.Tools.Base" version="26.2.14" targetFramework="net48" />
+  <package id="Syncfusion.Tools.Windows" version="26.2.14" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net472" />
