FrmHome: Introduced mainFormInstance parmeter to Interact with MainForm.
Introduced AvyaktMurliSearchEngine Inherited class.

-Shreehari.

--- a/MurliAnveshan.csproj
+++ b/MurliAnveshan.csproj
@@ -293,6 +293,12 @@
     <Compile Include="Controls\PageNavigator.Designer.cs">
       <DependentUpon>PageNavigator.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\PaginationControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\PaginationControl.Designer.cs">
+      <DependentUpon>PaginationControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\PDFViewer.cs">
       <SubType>UserControl</SubType>
     </Compile>
