Adding Necessary but missing files.
--Shreehari.

--- a/App.config
+++ b/App.config
@@ -1,19 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+  </startup>
+
+  <appSettings>
+    <add key="PageSize" value="8" />
+  </appSettings>
 
   <connectionStrings>
 
-    <!--<add name="MurliSearchDBConString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB; AttachDbFilename= C:\Users\Shreehari\source\repos\2022\MurliSearch\Database\MurliSearchDb.mdf; Integrated Security = True;"/>-->
+    <add name="MurliSearchDBConString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB; AttachDbFilename= C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Database\MurliAnveshanDB.mdf; Integrated Security = True;" />
 
     <add name="MurlisPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Murlis" />
     <add name="HindiAVMurlisPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Murlis\Hindi Murlis\Avyakt Murlis" />
     <add name="HindiAVMurlisPDFPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Murlis\Hindi Murlis\Avyakt Murlis\PDF Murlis" />
-    
+
     <add name="IndexPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Indexes" />
-    
+
     <add name="ImagesPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Resources\Images" />
 
     <add name="IconsPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Resources\Images\Icons" />
@@ -23,28 +27,35 @@
     <!--<add name="JsonFilesPath" connectionString="C:\Users\Shreehari\source\repos\2022\MurliSearch\Others"/>-->
 
   </connectionStrings>
-  
-  
+
+
   <runtime>
-  
-  
-          <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-  
-  
-                  <dependentAssembly>
-  
-  
-                          <assemblyIdentity name="Syncfusion.Compression.Base" publicKeyToken="3d67ed1f87d44c89" culture="neutral" />
-  
-  
-                          <bindingRedirect oldVersion="0.0.0.0-26.2462.14.0" newVersion="26.2462.14.0" />
-  
-  
-                  </dependentAssembly>
-  
-  
-          </assemblyBinding>
-  
-  
+
+
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.Compression.Base" publicKeyToken="3d67ed1f87d44c89" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-26.2462.14.0" newVersion="26.2462.14.0" />
+      </dependentAssembly>
+
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.Licensing" publicKeyToken="632609b4d040f6b4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-28.1462.35.0" newVersion="28.1462.35.0" />
+      </dependentAssembly>
+
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+      </dependentAssembly>
+
+    </assemblyBinding>
+
+
   </runtime>
 </configuration>
