--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Anotar.NLog.Fody" version="6.0.0" targetFramework="net48" />
+  <package id="BitMiracle.LibTiff.NET" version="2.4.649" targetFramework="net48" />
+  <package id="Fody" version="6.6.0" targetFramework="net48" developmentDependency="true" />
   <package id="J2N" version="2.0.0" targetFramework="net472" />
   <package id="Lucene.Net" version="4.8.0-beta00016" targetFramework="net472" />
   <package id="Lucene.Net.Analysis.Common" version="4.8.0-beta00016" targetFramework="net472" />
@@ -8,15 +11,22 @@
   <package id="Lucene.Net.Sandbox" version="4.8.0-beta00016" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.1.2" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="1.1.1" targetFramework="net472" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
-  <package id="Microsoft.Web.WebView2" version="1.0.2739.15" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="net472" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="net48" />
+  <package id="NLog" version="4.7.12" targetFramework="net48" />
   <package id="Prism.Core" version="7.2.0.1422" targetFramework="net472" />
+  <package id="SkiaSharp" version="2.88.8" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.macOS" version="2.88.8" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.Win32" version="2.88.8" targetFramework="net48" />
   <package id="Syncfusion.Compression.Base" version="26.2.14" targetFramework="net48" />
+  <package id="Syncfusion.Compression.NET" version="28.1.35" targetFramework="net48" />
+  <package id="Syncfusion.DocIO.NET" version="28.1.35" targetFramework="net48" />
   <package id="Syncfusion.Grid.Base" version="26.2.14" targetFramework="net48" />
   <package id="Syncfusion.Grid.Windows" version="26.2.14" targetFramework="net48" />
-  <package id="Syncfusion.Licensing" version="26.2.14" targetFramework="net48" />
+  <package id="Syncfusion.Licensing" version="28.1.35" targetFramework="net48" />
+  <package id="Syncfusion.OfficeChart.NET" version="28.1.35" targetFramework="net48" />
+  <package id="Syncfusion.Pdf.NET" version="28.1.35" targetFramework="net48" />
   <package id="Syncfusion.Pdf.WinForms" version="26.2.14" targetFramework="net48" />
   <package id="Syncfusion.PdfToImageConverter.WinForms" version="26.2.14" targetFramework="net48" />
   <package id="Syncfusion.PdfViewer.Windows" version="26.2.14" targetFramework="net48" />
@@ -26,6 +36,7 @@
   <package id="Syncfusion.Tools.Base" version="26.2.14" targetFramework="net48" />
   <package id="Syncfusion.Tools.Windows" version="26.2.14" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net472" />
   <package id="System.Console" version="4.3.0" targetFramework="net472" />
@@ -42,16 +53,18 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net472" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
@@ -62,12 +75,14 @@
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="6.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net472" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net48" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
+  <package id="WindowsAPICodePack" version="8.0.6" targetFramework="net48" />
 </packages>
