--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /Controls/PDFViewerControl.cs
 /Controls/PDFViewerControl.Designer.cs
+/Murlis/Hindi Murlis/To Remove Quotes
