Now Dynamically Refering different App.Config files based on Running Mode: App.Debug.Config or App.Release.Config.

--- a/App.Release.config
+++ b/App.Release.config
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-
-
-<!-- App.DEBUG.config -->
-
-
+<!-- App.RELEASE.config -->
 
 <configuration>
   <startup>
@@ -15,13 +11,13 @@
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <connectionStrings>
-    <add name="MurliAnveshanDBConString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB; AttachDbFilename= C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Database\MurliAnveshanDB.mdf; Integrated Security = True;" />
-    <add name="MurlisPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Murlis" />
-    <add name="HindiAVMurlisPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Murlis\Hindi Murlis\Avyakt Murlis" />
-    <add name="HindiAVMurlisPDFPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Murlis\Hindi Murlis\Avyakt Murlis\PDF Murlis" />
-    <add name="IndexPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Indexes" />
-    <add name="ImagesPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Resources\Images" />
-    <add name="IconsPath" connectionString="C:\Users\Shreehari\source\repos\2026\MurliAnveshan\Resources\Images\Icons" />
+    <add name="MurliAnveshanDBConString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB; AttachDbFilename= C:\Program Files\MurliAnveshan\Database\MurliAnveshanDB.mdf; Integrated Security = True;" />
+    <add name="MurlisPath" connectionString="C:\Program Files\MurliAnveshan\Murlis" />
+    <add name="HindiAVMurlisPath" connectionString="C:\Program Files\MurliAnveshan\Murlis\Hindi Murlis\Avyakt Murlis" />
+    <add name="HindiAVMurlisPDFPath" connectionString="C:\Program Files\MurliAnveshan\Murlis\Hindi Murlis\Avyakt Murlis\PDF Murlis" />
+    <add name="IndexPath" connectionString="C:\Program Files\MurliAnveshan\Indexes" />
+    <add name="ImagesPath" connectionString="C:\Program Files\MurliAnveshan\Resources\Images" />
+    <add name="IconsPath" connectionString="C:\Program Files\MurliAnveshan\Resources\Images\Icons" />
     <!--<add name="LogFilePath" connectionString="C:\Users\Shreehari\source\repos\2022\MurliSearch\Log Files"/>-->
     <!--<add name="JsonFilesPath" connectionString="C:\Users\Shreehari\source\repos\2022\MurliSearch\Others"/>-->
   </connectionStrings>
